--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,9 +15,14 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+
+        debug{
+            buildConfigField "String", "BASE_URL", "https://jsonplaceholder.typicode.com/"
         }
     }
 }
